<?xml version="1.0" encoding="utf-8"?>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:background="@drawable/bg9"
	    android:orientation="vertical"
	    android:padding="5dp" >

	    <Spinner 
        android:id="@+id/spin_banks"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/prompt_banks" android:entries="@array/banks_array"/>

	    <LinearLayout
	        android:id="@+id/linearLayout1"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:gravity="center"
	        android:orientation="vertical" >

	        <Button
	            android:id="@+id/btn_getPassword"
	            android:layout_width="150dp"
	            android:layout_height="wrap_content"
	            android:text="@string/btn_getPass"
	            android:textColor="@color/black"	           
	            android:background="@drawable/mobile_button"     
	            android:textSize="18dp" android:textStyle="bold" android:typeface="serif" android:height="41dp" android:shadowColor="#FFFFFF" android:shadowDx="1" android:shadowDy="1" android:shadowRadius="1"/>

	        <TextView
	            android:id="@+id/textView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" android:textSize="12dp"/>

	        <Button
	            android:id="@+id/btn_about"
	            android:layout_width="150dp"
	            android:layout_height="wrap_content"
	            android:text="@string/btn_About"
	            android:background="@drawable/mobile_button" android:textSize="18dp" android:textStyle="bold" android:typeface="serif" android:height="41dp" android:textColor="@color/black" android:shadowColor="#FFFFFF" android:shadowDx="1" android:shadowDy="1" android:shadowRadius="1"/>

	        <TextView
	            android:id="@+id/textView2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" android:textSize="12dp"/>

	        <Button
	            android:id="@+id/btn_quit"
	            android:layout_width="150dp"
	            android:layout_height="wrap_content"
	            android:text="@string/btn_Quit" 
	            android:background="@drawable/mobile_button" android:textSize="18dp" android:textStyle="bold" android:typeface="serif" android:height="41dp" android:shadowColor="#FFFFFF" android:shadowDx="1" android:shadowDy="1" android:shadowRadius="1" android:textColor="@color/black"/>

	    </LinearLayout>
	    
    </LinearLayout>
